--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,11 @@ dependencies {
     //Design Library for Coordinator Layout and Toolbar
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:cardview-v7:26.+'
+
+    //BottomNavigationViewEx Library
+    compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.4'
+    compile 'com.android.support:design:25.3.1'
 
     //Circle ImageView
     compile 'de.hdodenhof:circleimageview:2.2.0'
