--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Home.HomeActivity"></activity>
-        <activity android:name=".AlertsActivity"></activity>
-        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".Alerts.AlertsActivity"></activity>
+        <activity android:name=".Profile.ProfileActivity"></activity>
     </application>
 
 </manifest>
