--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".Home.HomeActivity"></activity>
         <activity android:name=".Alerts.AlertsActivity"></activity>
         <activity android:name=".Profile.ProfileActivity"></activity>
+        <activity android:name=".Model.ListExercises"></activity>
     </application>
 
 </manifest>
