--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Model.ListExercises">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Home.HomeActivity"></activity>
+        <!--<activity android:name=".Home.HomeActivity"></activity>-->
         <activity android:name=".Alerts.AlertsActivity"></activity>
         <activity android:name=".Profile.ProfileActivity"></activity>
-        <activity android:name=".Model.ListExercises"></activity>
+        <!--<activity android:name=".Model.ListExercises"></activity>-->
     </application>
 
 </manifest>
