--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.arturofilio.arturoconsulting">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +19,7 @@
             </intent-filter>
         </activity>
         <!--<activity android:name=".Home.HomeActivity"></activity>-->
-        <!--<activity android:name=".Model.ListExercises"></activity>-->
+        <activity android:name=".Home.DisplayListActivity"></activity>
         <activity android:name=".Alerts.AlertsActivity"></activity>
         <activity android:name=".Profile.ProfileActivity"></activity>
         <activity android:name=".Profile.AccountSettingsActivity"></activity>
