--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Model.ListExercises">
+        <activity android:name=".Home.DisplayListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,8 +19,8 @@
             </intent-filter>
         </activity>
         <!--<activity android:name=".Home.HomeActivity"></activity>-->
-        <activity android:name=".Home.GalleryActivity"></activity>
-        <activity android:name=".Home.DisplayListActivity"></activity>
+        <activity android:name=".ExerciseActivity.GalleryActivity"></activity>
+        <activity android:name=".Model.ListExercises"></activity>
         <activity android:name=".Alerts.AlertsActivity"></activity>
         <activity android:name=".Profile.ProfileActivity"></activity>
         <activity android:name=".Profile.AccountSettingsActivity"></activity>
